# dual_motor_hat_ROS2

./: CMakeLists.txt  README.md  dfrobot_dc_motor_hardware.xml  package.xml
bringup/config/: dfrobot_dc_motor.yaml  ekf.yaml  nav2_params.yaml
bringup/launch/: dfrobot_dc_motor.launch.py
config/: dfrobot_dc_motor.yaml
description/ros2_control/: diffbot.ros2_control.xacro
description/rviz/: dfrobot.rviz
description/urdf/: dfrobot_robot.urdf.xacro  diffbot.materials.xacro  diffbot_description.urdf.xacro
hardware/: dfrobot_dc_motor.cpp  dfrobot_dc_motor_hardware.cpp
hardware/include/dfrobot_dc_motor_hardware/: dfrobot_dc_motor.hpp  dfrobot_dc_motor_hardware.hpp  visibility_control.h  wheel.hpp
include/dfrobot_dc_motor_hardware/: dfrobot_dc_motor_hardware.hpp  i2c_interface.hpp
launch/: dfrobot_dc_motor_launch.py
log/: latest_build
plugin_description/: hardware_plugins.xml
src/: dfrobot_dc_motor_hardware.cpp  i2c_interface.cpp
