<?xml version="1.0"?>
<package format="3">
  <name>dfrobot_dc_motor_hardware</name>
  <version>0.1.0</version>
  <description>DFRobot DC Motor Driver Hardware Interface for ROS2 Control</description>

  <maintainer email="rhodyboland@hotmail.com">Rhody Boland</maintainer>

  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <!-- System dependency for I2C -->
  <build_depend>libi2c-dev</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <!-- <exec_depend>ros2_control</exec_depend> -->
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>rviz2</exec_depend> -->
  <exec_depend>libi2c-dev</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- Test dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- <hardware_interface plugin="${prefix}/share/${PROJECT_NAME}/dfrobot_dc_motor_hardware.xml"/> -->
  </export>
</package>
